--- a/www/index.html
+++ b/www/index.html
@@ -8,14 +8,17 @@
     <title>Connect With Mentors</title>
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700italic,400italic,700,900,900italic' rel='stylesheet' type='text/css'>
     <link rel="icon" href="img/icon.png">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 
     <script src="bower_components/angular/angular.min.js"></script>
+    <script src="http://code.angularjs.org/1.4.8/angular-sanitize.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="js/app.js"></script>
 
     <script>
-      window.USER_ID = 0;//window.prompt('What user?');
+      window.HOST = 'http://192.168.3.184:8080';
+      window.USER_ID = 6;//window.prompt('What user?');
     </script>
   </head>
   <body ng-app="mentor">
