--- a/www/index.html
+++ b/www/index.html
@@ -14,14 +14,17 @@
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="http://code.angularjs.org/1.4.8/angular-sanitize.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="js/api.js"></script>
     <script src="js/app.js"></script>
 
     <script>
       window.HOST = 'http://0.0.0.0:8080';
-      window.USER_ID = 6;//window.prompt('What user?');
+      window.USER_ID = 6;
     </script>
   </head>
-  <body ng-app="mentor" ng-init="USER_ID = 6">
-    <div ui-view id="view"></div>
+  <body ng-app="mentor">
+    <div ng-controller="homeController">
+      <div ui-view id="view"></div>
+    </div>
   </body>
 </html>
