Add prompt dialog

--- a/www/index.html
+++ b/www/index.html
@@ -6,10 +6,19 @@
     <!-- <meta name="theme-color" content="#4d394b"> -->
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1.0,user-scalable=no">
     <title>Connect With Mentors</title>
+
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700italic,400italic,700,900,900italic' rel='stylesheet' type='text/css'>
     <link rel="icon" href="img/icon.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="bower_components/vex/css/vex.css">
+    <link rel="stylesheet" href="bower_components/vex/css/vex-theme-plain.css">
+    <link rel="stylesheet" href="bower_components/vex/css/vex-theme-os.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="bower_components/vex/js/vex.combined.min.js"></script>
+
+    <script>vex.defaultOptions.className = 'vex-theme-plain';</script>
 
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="http://code.angularjs.org/1.4.8/angular-sanitize.js"></script>
