--- a/www/index.html
+++ b/www/index.html
@@ -27,8 +27,9 @@
     <script src="js/app.js"></script>
 
     <script>
-      window.HOST = 'http://192.168.2.141:8080';
-      window.USER_ID = 6;
+      window.SERVER_IP = 'localhost:8080'
+      window.HOST = 'http://' + window.SERVER_IP;
+      window.USER_ID = 4;
     </script>
   </head>
   <body ng-app="mentor">
