--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,8 @@
     <script>
       window.SERVER_IP = 'localhost:8080'
       window.HOST = 'http://' + window.SERVER_IP;
-      window.USER_ID = 4;
+      window.USER_ID = 6;
+      window.PETER = false;
     </script>
   </head>
   <body ng-app="mentor">
